# prefixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  flake.nix  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  tweak_proposal.md
.github/workflows/: pr-title.yml  pypi-release.yml  release.yml  tests.yml  update.yml  validate-tweaks.yml
nix/: default.nix  steam-run.patch
prefixer/: cli.py  gui.py
prefixer/coldpfx/: __init__.py
prefixer/coldpfx/regedit/: models.py  parser.py  writer.py
prefixer/core/: __init__.py  conditions.py  exceptions.py  helpers.py  models.py  paths.py  registry.py  settings.py  steam.py  tasks.py  tweaks.py
prefixer/data/tweaks/: bepinex.json5  d3dcompiler.json  dotnet48.json  reshade.json5  vcrun2022.json  winhttp.json5
prefixer/data/tweaks/fixes/: mouse_grab.json5
prefixer/data/tweaks/fonts/: andale.json5  arial.json5  core.json5  courier.json5  georgia.json5  impact.json5  trebuchet.json5  webdings.json5
prefixer/data/tweaks/games/: cyberpunk2077.json5  fallout4.json5
prefixer/data/tweaks/libs/: openal.json5  physx.json5
prefixer/data/tweaks/libs/d3dx9/: 43.json5  47.json5
prefixer/data/tweaks/libs/dotnet/: 35.json5  40.json5  452.json5  462.json5  472.json5  48.json5  (+3 more)
prefixer/data/tweaks/loaders/: balatro_steamodded.json5  bepinex.json5
prefixer/data/tweaks/misc/: winhttp.json5
prefixer/data/tweaks/reghacks/: backend_vulkan.json5  csmt_off.json5  csmt_on.json5  decorated_off.json5  decorated_on.json5  fake_2gb_vram.json5  font_fixes.json5  fontsmooth_bgr.json5  fontsmooth_disable.json5  fontsmooth_gray.json5  fontsmooth_rgb.json5  grab_fullscreen.json5  hid.json5  hide_wine.json5  mouse_warp.json5  nocrashdialog.json5  renderer_gdi.json5  renderer_opengl.json5  renderer_vulkan.json5  sound_alsa.json5  sound_pulse.json5  vd_1080p.json5  vd_720p.json5  vd_off.json5  vram_1024.json5  vram_2048.json5  vram_4096.json5  vram_8192.json5  win10.json5  win11.json5  win2k.json5  win7.json5  win81.json5  winvista.json5  winxp.json5
prefixer/data/tweaks/themes/: breeze_dark.json5  font_fixes.json5  fonts.json5  reset.json5
prefixer/directpfx/: exceptions.py
prefixer/directpfx/regedit/: models.py  parser.py  writer.py
prefixer/providers/: classes.py  steam.py
prefixer/serverless/regedit/: parser.py  writer.py
tests/: test_performance.py  test_tweaks.py
tests/coldpfx/: test_regedit.py
(+72 files in other folders)
