[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefixer"
description = "Modern Proton Prefix management tool"
version = "1.3.2"
authors = [ {name='Wojtmic', email='mail@wojtmic.dev'} ]

readme = 'README.md'
license = {file = 'LICENSE'}

classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment",
]

requires-python = ">=3.13"

dependencies = [
    "vdf~=3.4",
    "json5~=0.12.1",
    "requests~=2.32.5",
    "click~=8.2.1",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
prefixer = "prefixer.cli:main"
#prefixerrun = "prefixer.dialog:runDialog"

[tool.setuptools.packages.find]
where = ["."]
include = ["prefixer*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.25.8",
]

[project.urls]
Homepage = "https://github.com/wojtmic/prefixer"
Issues = "https://github.com/wojtmic/prefixer/issues"
